samples/_failures_safe/1761202003_ee83d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c258176c.c: In function ‘main’:
./samples/SAFE/__tmp_c258176c.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
